--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -11,8 +11,10 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-edit post-icon blue brf">
-            </button>
+            <a href="#/app/suggestpost">
+                <button class="button button-icon button-clear ion-edit post-icon blue brf">
+                </button>
+            </a>
             <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
             </button>
         </ion-nav-buttons>
