--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view class="bghome bgtrans">
+<ion-view class="bghome">
     <ion-nav-bar class="bgtrans">
         <ion-nav-back-button>
         </ion-nav-back-button>
@@ -33,13 +33,13 @@
         <hr class="home-divid">
         <div class="home-socials">
             <div class="home-fb">
-                <a href="#/app/tablefb"> <i class="icon icon-fb"></i>
+                <a href="#/app/fbpost"> <i class="icon icon-fb"></i>
                     <div class="home-fb1">Facebook</div>
                 </a>
 
             </div>
             <div class="home-twit">
-                <a href="#/app/table"> <i class="icon icon-twit"></i>
+                <a href="#/app/twitterpost"> <i class="icon icon-twit"></i>
                     <div class="home-twit1">Twitter</div>
                 </a>
 
