--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -6,7 +6,7 @@
             <button class="button button-icon button-clear ion-navicon menu-btncolor green blue brf" menu-toggle="left">
             </button>
         </ion-nav-buttons>
-        <div class="head-lead">
+        <div class="head-lead1">
             Leader Board
             <hr class="verticalup">
         </div>
