--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,18 @@
         </div>
         <div class="button-stnd">
             <div class="button-tickfb">
-                <button class="button button-small button-light bgtrans">
-                    Information
-                </button>
+                <a href="#/app/home">
+                    <button class="button button-small button-light bgtrans">
+                        Information
+                    </button>
+                </a>
             </div>
             <div class="button-ticktwit">
-                <button class="button button-small button-light bgtrans">
-                    Login
-                </button>
+                <a href="#/app/home">
+                    <button class="button button-small button-light bgtrans">
+                        Login
+                    </button>
+                </a>
             </div>
         </div>
         <!--                   box slider-->
