--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
             </button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-gear-a menu-btncolor brf">
+            <button class="button button-icon button-clear ion-gear-a menu-btncolor brf" ng-click="openedit()">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
