--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -1,4 +1,4 @@
-<ion-view title="">
+<ion-view class="bckgrnd">
     <ion-nav-bar class="bgtrans">
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
