--- a/templates/postinfofb.html
+++ b/templates/postinfofb.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view class="bckgrnd">
     <ion-nav-bar class="bgtrans" title="Createpost" class="leader-cont">
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
