--- a/templates/suggestedpost.html
+++ b/templates/suggestedpost.html
@@ -1,4 +1,4 @@
-<ion-view title="">
+<ion-view class="bckgrnd">
     <ion-nav-bar class="bgtrans">
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
@@ -15,36 +15,53 @@
         <div class="suggested">
             <div class="row">
                 <div class="col">
-                    <div class="circle clrblue">
-                        3
-                    </div>
-                    <h5>
+                    <a href="#/app/createpost">
+                        <div>
+                            <div class="circle clrblue">
+                                3
+                            </div>
+                            <h5>
                     Suggested Posts
                 </h5>
+                        </div>
+                    </a>
                 </div>
+
                 <div class="col">
-                    <div class="circle clrgreen">
-                        1
-                    </div>
-                    <h5>
+                    <a href="#/app/createpost">
+                        <div>
+                            <div class="circle clrgreen">
+                                1
+                            </div>
+                            <h5>
                     Approved Posts
                 </h5>
+                        </div>
+                    </a>
                 </div>
                 <div class="col">
-                    <div class="circle clrgred">
-                        7
-                    </div>
-                    <h5>
+                    <a href="#/app/createpost">
+                        <div>
+                            <div class="circle clrgred">
+                                7
+                            </div>
+                            <h5>
                     Pending Posts
                 </h5>
+                        </div>
+                    </a>
                 </div>
                 <div class="col">
-                    <div class="circle clrgviolet">
-                        5
-                    </div>
-                    <h5>
+                    <a href="#/app/createpost">
+                        <div>
+                            <div class="circle clrgviolet">
+                                5
+                            </div>
+                            <h5>
                     Rejected Posts
                 </h5>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="suggested-img">
