--- a/templates/twitterpost.html
+++ b/templates/twitterpost.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view class="bckgrnd">
     <ion-nav-bar class="bgtrans" title="Createpost" class="leader-cont">
         <ion-nav-back-button class="blue">
         </ion-nav-back-button>
@@ -7,30 +7,34 @@
             </button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-edit post-icon blue brf">
-            </button>
+            <a href="#/app/suggestpost">
+                <button class="button button-icon button-clear ion-edit post-icon blue brf">
+                </button>
+            </a>
             <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
         <div class="head-lead">
-            <i class="iicon ion-twit"></i>
+            <i class="icons ion-social-twitter"></i>
             <h4>Twitter</h4>
             <hr class="verticalup">
         </div>
         <div class="tables">
             <div class="row">
                 <div class="col">
-                    <div class="tbl-items">
-                        <h5 class="tot-title">      
+                    <a href="#/app/table">
+                        <div class="tbl-items">
+                            <h5 class="tot-title">      
                              Action Done
                              </h5>
-                        <i class="icons ion-ticks"></i>
-                        <h5>  
+                            <i class="icons ion-ticks"></i>
+                            <h5>  
                    10
                     </h5>
-                    </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="col">
                     <div class="tbl-items">
@@ -44,29 +48,29 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="tbl-items">
-                        <h5 class="tot-title">  
+                    <a href="#/app/table">
+                        <div class="tbl-items">
+                            <h5 class="tot-title">  
                     Total Reach
                     </h5>
-                        <i class="icons ion-reach"></i>
-                        <h5>  
+                            <i class="icons ion-reach"></i>
+                            <h5>  
                    50
                     </h5>
-                    </div>
+                        </div>
+                    </a>
                 </div>
             </div>
             <hr class="vertical-blue">
         </div>
         <div class="row center-main">
             <div class="col">
-                <a href="#/app/suggestpost">
-                    <button class="button button-small button-positive history">
-                        New Post
-                    </button>
-                </a>
+                <button class="button button-small button-positive history activated">
+                    New Post
+                </button>
             </div>
             <div class="col">
-                <a href="#/app/postinfo">
+                <a href="#/app/table">
                     <button class="button button-small button-positive history">
                         History
                     </button>
