--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -1,8 +1,8 @@
 <ion-view class="bckgrnd">
     <ion-content>
         <div class="edit-header">
-            <button class="button button-icon icon ion-close-round brf" ng-click="closeModal();"></button>
-            <button class=" button button-icon icon ion-checkmark brf "></button>
+            <button class="button button-icon icon ion-close-round edit-pro brf" ng-click="closeModal();"></button>
+            <button class=" button button-icon icon ion-checkmark edit-pro brf "></button>
         </div>
         <div class="pic-edit ">
             <div class="abc ">
