--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,14 @@
         </div>
         <div class="button-stnd">
             <div class="button-tickfb">
-                <a href="#/app/home">
+                <a href="#/welcome">
                     <button class="button button-small button-light bgtrans">
                         Information
                     </button>
                 </a>
             </div>
             <div class="button-ticktwit">
-                <a href="#/app/home">
+                <a href="#/welcome">
                     <button class="button button-small button-light bgtrans">
                         Login
                     </button>
@@ -25,8 +25,10 @@
                 <ion-slide>
                     <div class="item-login">
                         <div class="land-content">
-                            <h5>Lorem Ipsum Lorem Ipsum</h5>
-                            <h5>Lorem Ipsum Lorem Ipsum</h5>
+                            <div class="lnd-cont">
+                                <h5>Welcome to Dell Campassador Program.</h5>
+                                <h5>Share your technology stories with your friends and family.</h5>
+                            </div>
                             <img src="img/college-kids.jpg">
                         </div>
                     </div>
