--- a/templates/profile.html
+++ b/templates/profile.html
@@ -55,27 +55,35 @@
 
                 <div class="all-profile">
                     <div class="vertical-line"></div>
-                    <div class="profile-action">
-                        <p>Action Done</p>
-                        <p class="score">0</p>
-                    </div>
+                    <a href="#/app/tablefb">
+                        <div class="profile-action">
+                            <p>Action Done</p>
+                            <p class="score">0</p>
+                        </div>
+                    </a>
                     <div class="vertical-line"></div>
-                    <div class="profile-remain">
-                        <p>Action Remaining</p>
-                        <p class="score">0</p>
-                    </div>
+                    <a href="#/app/fbpost">
+                        <div class="profile-remain">
+                            <p>Action Remaining</p>
+                            <p class="score">0</p>
+                        </div>
+                    </a>
                     <div class="vertical-line"></div>
-                    <div class="social-fb">
-                        <i class="iicon ion-fb"></i>
-                        <p>Likes : <span class="like score"> 20 </span>| Comment:<span class="comment score"> 5 </span>
-                        </p>
-                    </div>
+                    <a href="#/app/fbpost">
+                        <div class="social-fb">
+                            <i class="iicon ion-fb"></i>
+                            <p>Likes : <span class="like score"> 20 </span>| Comment:<span class="comment score"> 5 </span>
+                            </p>
+                        </div>
+                    </a>
                     <div class="vertical-line"></div>
-                    <div class="social-twit">
-                        <i class="iicon ion-twit"></i>
-                        <p>Favourites : <span class="favourites score"> 7 </span>| Retweet : <span class="Retweet score"> 5 </span>
-                        </p>
-                    </div>
+                    <a href="#/app/twitterpost">
+                        <div class="social-twit">
+                            <i class="iicon ion-twit"></i>
+                            <p>Favourites : <span class="favourites score"> 7 </span>| Retweet : <span class="Retweet score"> 5 </span>
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
