--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ button {
 
 .button-stnd {
     text-align: center;
-    padding: 5px 20px 50px 20px;
+    padding: 5px 20px 0px 20px;
 }
 
 .button.button-light {
@@ -682,9 +682,9 @@ button.button.button-icon.button-clear.ion-navicon.menu-btncolor {
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     border-radius: 100%;
-    height: 35px;
-    width: 35px;
-    padding: 1px 7px 0px 0;
+    height: 25px;
+    width: 30px;
+    padding: 0px 7px 8px 0px;
 }
 
 ion-view.bgprofile.pane {
@@ -714,7 +714,7 @@ ion-view.bgprofile.pane {
 .profile-cont1 {
     background: rgba(40, 70, 121, 0.9);
     min-height: 470px;
-    z-index: -8;
+    z-index: 1;
     position: relative;
 }
 
@@ -731,6 +731,7 @@ ion-view.bgprofile.pane {
     -moz-transition: 300ms ease;
     -o-transition: 300ms ease;
     transition: 300ms ease;
+    z-index: 2;
 }
 
 .profile-cont:before {
@@ -1549,8 +1550,8 @@ button.button-clear.post-icon {
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     border-radius: 100%;
-    height: 33px;
-    width: 33px;
+    height: 25px;
+    width: 30px;
     color: #ff7701;
 }
 
@@ -1558,7 +1559,7 @@ button.button-clear.post-icon {
     text-align: center;
     font-size: 16px;
     line-height: 150%;
-    color: #1189C5;
+    color: #0F88C5;
 }
 
 .post-cont h4 a {
@@ -1566,7 +1567,7 @@ button.button-clear.post-icon {
 }
 
 .button-post {
-    color: #5ea9dd;
+    color: #0F88C5;
     padding: 2px 6px 1px 6px;
 }
 
@@ -1588,10 +1589,9 @@ button.button.icon-left.ion-social-twitter.button-post {
 
 button.button.ion-edit.post-icon {
     background: #ff7701;
-    font-size: 20px;
     color: #fff;
     border: 1px solid #ff7701;
-    padding: 0px 6px 0px 6px;
+    padding: 0px 2px 0px 1px;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     border-radius: 100%;
@@ -1688,9 +1688,9 @@ ion-item.mk-class.item {
 .bar .button.icon-left.brf:before,
 .bar .button.icon-right.brf:before {
     padding-right: 0px;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 6px;
-    padding-top: 12px;
+    padding-top: 11px;
 }
 
 button.button.menu-btncolor.green {
@@ -1700,8 +1700,8 @@ button.button.menu-btncolor.green {
     border-radius: 100%;
     color: #ff7701;
     padding: 0px 7px;
-    width: 33px;
-    height: 33px;
+    width: 30px;
+    height: 25px;
 }
 
 button.button.menu-btncolor.green.blue {
@@ -1926,7 +1926,7 @@ button.button.button-small.imgset {
 }
 
 .tbl-items h5 {
-    color: #25B0E2;
+    color: #0F88C5;
     font-weight: 500;
     font-size: 12px;
     text-transform: uppercase;
@@ -1951,13 +1951,13 @@ button.button.button-small.imgset {
 .tlb-item h5 {
     /* text-align: center; */
     
-    color: #73d3f6;
+    color: #0F88C5;
     font-weight: 300;
 }
 
 .tlb-item {
     text-align: center;
-    color: #73d3f6;
+    color: #0F88C5;
     font-size: 12px;
 }
 
@@ -2087,7 +2087,7 @@ button.button.back-button.buttons.header-item.green {
 
 .modal-cont {
     text-align: center;
-    padding: 35% 15px;
+    padding: 26% 15px;
 }
 
 .modal-button {
@@ -2096,6 +2096,7 @@ button.button.back-button.buttons.header-item.green {
 
 .cont-modal h4 {
     color: #0084c4;
+    padding-bottom: 15px;
 }
 
 .cont-modal {
@@ -2177,7 +2178,7 @@ button.button.icon-left.ion-social-twitter.button-post:hover {
 }
 
 button.button.button-icon.ion-close.post-icon.blue:before {
-    padding-top: 13px;
+    padding-top: 12px;
 }
 
 .head-lead1 {
@@ -2185,7 +2186,7 @@ button.button.button-icon.ion-close.post-icon.blue:before {
     font-size: 16px;
     text-transform: uppercase;
     color: #0f88c5;
-    padding-top: 14px;
+    padding-top: 15px;
     background: rgba(255, 255, 255, 0.9);
 }
 
@@ -2222,4 +2223,20 @@ button.button.button-icon.icon.edit-pro.brf {
 
 label.item.item-input.fb-twt i.ion-social-facebook {
     padding-right: 25px;
+}
+
+.lnd-cont {
+    padding-bottom: 15px;
+}
+
+.profile-cont1 a {
+    color: #fff;
+    display: block;
+    cursor: pointer;
+    z-index: 99;
+    position: relative;
+}
+
+button.button.ion-gear-a.menu-btncolor.brf:before {
+    font-size: 20px;
 }
