--- a/templates/model.html
+++ b/templates/model.html
@@ -10,7 +10,9 @@
                 <h4>I am Dell Compassador!</h4> Join me in my journey of learning and help me land my first intership.
             </div>
             <div class="modal-button">
-                <button class="button button-assertive" type="submit" ng-click="closeModal()">post now</button>
+                <a href="#/app/home">
+                    <button class="button button-assertive" type="submit">post now</button>
+                </a>
             </div>
         </div>
     </ion-content>
