--- a/templates/fbpost.html
+++ b/templates/fbpost.html
@@ -7,12 +7,10 @@
             </button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <a href="#/app/suggestpost">
-                <button class="button button-icon button-clear ion-edit post-icon blue brf">
-                </button>
+            <a class="button button-icon button-clear ion-edit post-icon blue brf" href="#/app/suggestpost">
             </a>
-            <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
-            </button>
+            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf">
+            </a>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
