--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -11,10 +11,10 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-edit post-icon blue brf">
-            </button>
-            <button class="button button-icon button-clear ion-search menu-btncolor green blue brf">
-            </button>
+            <a class="button button-icon button-clear ion-edit post-icon blue brf" href="#/app/suggestpost">
+            </a>
+            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf">
+            </a>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
