--- a/css/style.css
+++ b/css/style.css
@@ -1597,6 +1597,7 @@ a.button.ion-edit.post-icon {
     border-radius: 100%;
     height: 30px;
     width: 30px;
+    display: inline-block;
 }
 
 .button-post.button.icon-left:before {
@@ -1715,6 +1716,7 @@ a.button.menu-btncolor.green {
     padding: 0px 7px;
     width: 30px;
     height: 25px;
+    display: inline-block;
 }
 
 button.button.menu-btncolor.green.blue {
@@ -2100,11 +2102,11 @@ button.button.back-button.buttons.header-item.green {
 
 .modal-cont {
     text-align: center;
-    padding: 26% 15px;
+    padding: 15% 15px;
 }
 
 .modal-button {
-    padding-top: 20%;
+    padding-top: 15%;
 }
 
 .cont-modal h4 {
