--- a/css/style.css
+++ b/css/style.css
@@ -1591,13 +1591,14 @@ a.button.ion-edit.post-icon {
     background: #ff7701;
     color: #fff;
     border: 1px solid #ff7701;
-    padding: 0px 2px 0px 1px;
+    padding: 0px 2px 0px 0px;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     border-radius: 100%;
     height: 30px;
-    width: 30px;
-    display: inline-block;
+    width: 32px;
+    display: inline-table;
+    margin-right: 5px;
 }
 
 .button-post.button.icon-left:before {
@@ -1691,7 +1692,7 @@ ion-item.mk-class.item {
 .bar .button.icon-left.brf:before,
 .bar .button.icon-right.brf:before {
     padding-right: 0px;
-    font-size: 15px;
+    font-size: 20px;
     line-height: 6px;
     padding-top: 11px;
 }
@@ -1713,10 +1714,10 @@ a.button.menu-btncolor.green {
     -moz-border-radius: 100%;
     border-radius: 100%;
     color: #ff7701;
-    padding: 0px 7px;
-    width: 30px;
-    height: 25px;
-    display: inline-block;
+    padding: 0px 6px 0 6px;
+    width: 26px;
+    height: 26px;
+    display: inline-table;
 }
 
 button.button.menu-btncolor.green.blue {
@@ -2254,4 +2255,9 @@ label.item.item-input.fb-twt i.ion-social-facebook {
 
 button.button.ion-gear-a.menu-btncolor.brf:before {
     font-size: 20px;
+}
+
+.bar .buttons-right span {
+    margin-left: 5px;
+    display: table;
 }
