--- a/templates/model.html
+++ b/templates/model.html
@@ -10,9 +10,7 @@
                 <h4>I am Dell Compassador!</h4> Join me in my journey of learning and help me land my first intership.
             </div>
             <div class="modal-button">
-                <a href="#/app/home">
-                    <button class="button button-assertive" type="submit">post now</button>
-                </a>
+                <button class="button button-assertive" type="submit" href=" #/app/home">post now</button>
             </div>
         </div>
     </ion-content>
